--- a/projeto01/src/app/app.component.html
+++ b/projeto01/src/app/app.component.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pog</title>
-</head>
-<body>
-  <h1>Pooog</h1>
-</body>
-</html>
+<h1>Pooog</h1>
+
+<app-novo-componente></app-novo-componente>
